--- a/src/app/help/Help.module.css
+++ b/src/app/help/Help.module.css
@@ -32,13 +32,13 @@
 }
 
 .helpListItem:hover {
-    background: var(--bg-subtask-pink);
+    background-color: var(--main-pink);
 }
 
-.helpListItem a {
-    font-size: 1.1em;
+.helpListItem h3 {
+    font-size: 1.3em;
     font-weight: 500;
-    text-decoration: none;
+    margin-bottom: 10px;
     color: var(--main-text);
 }
 
