--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,3 +94,14 @@ main .main-content {
     flex-direction: column;
   }
 }
+
+@media(max-width: 768px) {
+  main .main-content {
+    padding: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+}
