--- a/src/components/HeaderComponents/header/Header.module.css
+++ b/src/components/HeaderComponents/header/Header.module.css
@@ -99,6 +99,14 @@
         gap: 5px;
     }
 
+    .headerSearch {
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+    }
+
     .headerSearch input {
         font-size: 1.2em;
     }
