--- a/src/components/HomeComponents/subTaskItem/SubTaskItem.module.css
+++ b/src/components/HomeComponents/subTaskItem/SubTaskItem.module.css
@@ -59,6 +59,14 @@
 }
 
 @media(max-width: 768px) {
+    .subTask {
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+    }
+
     .subTaskTime {
         width: 80px;
         font-size: .9em;
@@ -75,13 +83,13 @@
 
 @media(max-width: 576px) {
     .subTask {
-        padding: 10px;
-        border-radius: 1px;
-        -webkit-border-radius: 12px;
-        -moz-border-radius: 17px;
-        -ms-border-radius: 17px;
-        -o-border-radius: 17px;
-    }
+        padding: 13px;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+}
 
     .subTaskMain {
         position: relative;
@@ -91,13 +99,15 @@
     }
 
     .subTaskTime {
+        padding: 2px 5px;
         position: absolute;
         font-size: .83em;
-        top: -19px;
+        top: -23px;
         display: flex;
         justify-content: center;
         border-radius: 5px;
-        background-color: var(--main-blue);
+        background-color: rgb(255, 136, 250, .4);
+        backdrop-filter: blur(10px);
         color: var(--main-text);
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
