--- a/src/components/HomeComponents/taskItem/TaskItem.module.css
+++ b/src/components/HomeComponents/taskItem/TaskItem.module.css
@@ -2,7 +2,7 @@
     position: relative;
     background-color: var(--main-light-blue);
     padding: 12px;
-    margin-bottom: 12px;
+    margin-bottom: 14px;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
@@ -59,6 +59,15 @@
 }
 
 @media(max-width: 768px) {
+    .taskItem {
+        padding: 12px 6px;
+        border-radius: 12px;
+        -webkit-border-radius: 12px;
+        -moz-border-radius: 12px;
+        -ms-border-radius: 12px;
+        -o-border-radius: 12px;
+    }
+
     .taskDate {
         width: 130px;
     }
@@ -75,12 +84,13 @@
 
 @media(max-width: 576px) {
     .taskItem {
-        border-radius: 15px;
-        -webkit-border-radius: 15px;
-        -moz-border-radius: 15px;
-        -ms-border-radius: 15px;
-        -o-border-radius: 15px;
-    }
+        padding: 12px 6px;
+        border-radius: 8px;
+        -webkit-border-radius: 8px;
+        -moz-border-radius: 8px;
+        -ms-border-radius: 8px;
+        -o-border-radius: 8px;
+}
 
     .taskDate {
         width: 110px;
