--- a/src/components/SideBarComponents/sidebar/Sidebar.module.css
+++ b/src/components/SideBarComponents/sidebar/Sidebar.module.css
@@ -105,6 +105,11 @@
         width: 100%;
         font-size: 1.25em;
         height: 74px;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
     }
 }
 
