--- a/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
+++ b/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
@@ -51,8 +51,8 @@
     }
 
     .headerMenuTablet {
-        background-color: rgba(172, 207, 255, 0.3);
-        backdrop-filter: blur(5px);
+        background-color: var(--main-white);
+        backdrop-filter: blur(10px);
         padding: 5px 20px;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
