--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 :root {
-  --main-light-blue: rgba(172, 207, 255, 0.15);
-  --main-hard-blue: rgba(172, 207, 255, .6);
+  --main-light-blue: rgba(97, 163, 255, 0.15);
+  --main-hard-blue: rgba(79, 152, 255, 0.6);
   --main-white: rgba(255, 255, 255, 1);
   --main-text: black;
 
   --current-month-days: rgba(255, 255, 255, 1);
-  --next-prev-days-calendar: rgba(178, 185, 199, 0.4);
+  --next-prev-days-calendar: rgba(147, 148, 149, 0.543);
 
   --main-pink: rgb(255, 136, 250, .4);
   --main-blue: rgba(172, 207, 255, 0.9) --main-hover: rgb(247, 192, 109, .2);
@@ -23,7 +23,7 @@
   --svg-filter: invert(1) hue-rotate(180deg);
 
   --current-month-days: rgb(173, 171, 171);
-  --next-prev-days-calendar: rgb(71, 71, 71);
+  --next-prev-days-calendar: rgba(71, 71, 71, 0.702);
 }
 
 * {
