added dynamic routes for Apps (dev state ---> need to handle db first to process)

--- a/src/app/apps/Apps.module.css
+++ b/src/app/apps/Apps.module.css
@@ -34,6 +34,10 @@
     transition: background 0.3s, height 0.3s, padding 0.3s;
 }
 
+.appsListItem a {
+    text-decoration: none;
+}
+
 .appsListItem:hover {
   background-color: var(--main-pink);
 }
