--- a/src/app/apps/[app]/App.module.css
+++ b/src/app/apps/[app]/App.module.css
@@ -1,3 +1,9 @@
+.appContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .appTitle {
     text-align: center;
     font-weight: 400;
@@ -6,9 +12,16 @@
 }
 
 .appParagraph {
-    margin-top: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
     text-align: center;
     font-weight: 300;
     font-size: 1.2em;
     margin-bottom: 30px;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -o-transform: translateX(-50%) translateY(-50%);
 }
