--- a/src/app/apps/[app]/App.module.css
+++ b/src/app/apps/[app]/App.module.css
@@ -1,9 +1,3 @@
-.appContainer {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
 .appTitle {
     text-align: center;
     font-weight: 400;
@@ -12,16 +6,9 @@
 }
 
 .appParagraph {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    margin-top: 100px;
     text-align: center;
     font-weight: 300;
     font-size: 1.2em;
     margin-bottom: 30px;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -o-transform: translateX(-50%) translateY(-50%);
 }
