--- a/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
+++ b/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
@@ -51,6 +51,8 @@
     }
 
     .headerMenuTablet {
+        border: 3px solid var(--main-light-blue);
+        border-right: none;
         backdrop-filter: blur(10px);
         padding: 5px 20px;
         border-top-left-radius: 10px;
