--- a/src/components/SideBarComponents/createForm/form/Form.module.css
+++ b/src/components/SideBarComponents/createForm/form/Form.module.css
@@ -68,6 +68,10 @@
     justify-content: space-between;
 }
 
+.timeContainer.disabled {
+    opacity: .4;
+}
+
 .createForm.lg .timeContainer .timeItem {
     display: flex;
     gap: 15px;
@@ -94,6 +98,28 @@
 }
 
 .timeItem input:focus {
+    outline: transparent;
+}
+
+.wholeDay {
+    padding-top: 15px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.wholeDay label {
+    font-size: 1.1em;
+}
+
+.wholeDay input {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    border: none;
+}
+
+.wholeDay input:focus {
     outline: transparent;
 }
 
