added sorting, filtration. UI updates

--- a/src/components/HomeComponents/homeHeader/HomeHeader.module.css
+++ b/src/components/HomeComponents/homeHeader/HomeHeader.module.css
@@ -1,12 +1,17 @@
 .mainHeader {
-    padding-bottom: 12px;
+    padding: 16px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+.headerBtnsContainer {
+    display: flex;
+}
+
 @media(max-width: 768px) {
     .mainHeader {
+        padding-top: 35px;
         position: relative;
     }
 }
