--- a/src/components/HomeComponents/subTaskItem/SubTaskItem.module.css
+++ b/src/components/HomeComponents/subTaskItem/SubTaskItem.module.css
@@ -81,11 +81,32 @@
     color: var(--main-text);
 }
 
+.addInfoEdit {
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    bottom: -6px;
+    right: 24px;
+    cursor: pointer;
+}
+.addInfoEdit:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
 .addInfoDelete {
     position: absolute;
+    border: none;
+    background-color: transparent;
     bottom: -10px;
     right: -8px;
     cursor: pointer;
+}
+.addInfoDelete:hover {
+    transform: scale(1.1);
 }
 
 .addInfo.visible {
@@ -199,6 +220,15 @@
         -ms-transform: translateX(-8px) scale(1.2);
         -o-transform: translateX(-8px) scale(1.2);
     }
+
+    
+.subTaskExpand.upsided {
+    transform: rotate(180deg) translateX(15px);
+    -webkit-transform: rotate(180deg) translateX(15px);
+    -moz-transform: rotate(180deg) translateX(15px);
+    -ms-transform: rotate(180deg) translateX(15px);
+    -o-transform: rotate(180deg) translateX(15px);
+}
 
     .addInfoDelete {
         transform: translateX(-8px);
