--- a/src/components/SideBarComponents/createForm/form/Form.module.css
+++ b/src/components/SideBarComponents/createForm/form/Form.module.css
@@ -1,118 +1,64 @@
-.formDate {
-    padding-left: 10px;
-    margin-bottom: 10px;
-    font-size: 1.25em;
-    font-weight: 400;
-    color: var(--main-text);
-}
-
-.createForm {
-    background-color: var(--main-hard-blue);
-    display: flex;
-    flex: 1;
-    width: 330px;
-    min-height: 367px;
-    flex-direction: column;
-    gap: 10px;
-    padding: 12px;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-}
-
-.createForm.lg {
-    background-color: var(--main-hard-blue);
-    backdrop-filter: blur(10px);
-    display: flex;
-    flex: 1;
-    width: 400px;
-    min-height: 367px;
-    flex-direction: column;
-    gap: 10px;
-    padding: 20px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-}
-
-.taskDetailsTitle {
-    font-size: 1.2em;
-    font-weight: 400;
-}
-
-.dateContainer {
-    display: flex;
-    align-items: center;
-    gap: 18px;
-}
-
-.dateContainer label {
-    font-size: 1.1em;
-}
-
-.dateContainer input {
-    background-color: var(--main-white);
-    border: none;
-    font-size: 1.1em;
-    flex: 1;
-    padding: 8px 13px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    cursor: pointer;
-}
-
-@media(max-width: 576px) {
-    .createForm.lg .dateContainer input {
-        border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        -ms-border-radius: 5px;
-        -o-border-radius: 5px;
+    .formDate {
+        padding-left: 10px;
+        margin-bottom: 10px;
+        font-size: 1.25em;
+        font-weight: 400;
+        color: var(--main-text);
     }
-}
 
+    .createForm {
+        background-color: var(--main-hard-blue);
+        display: flex;
+        flex: 1;
+        width: 330px;
+        min-height: 367px;
+        flex-direction: column;
+        gap: 10px;
+        padding: 12px;
+        border-radius: 20px;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        -ms-border-radius: 20px;
+        -o-border-radius: 20px;
+    }
 
-@media(max-width: 475px) {
     .createForm.lg {
-        width: 350px;
-        gap: 5px;
+        background-color: var(--main-hard-blue);
+        backdrop-filter: blur(10px);
+        display: flex;
+        flex: 1;
+        width: 400px;
+        min-height: 367px;
+        flex-direction: column;
+        gap: 10px;
+        padding: 20px;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
     }
 
-    .createForm.lg .dateContainer {
+    .taskDetailsTitle {
+        font-size: 1.2em;
+        font-weight: 400;
+    }
+
+    .dateContainer {
         display: flex;
         align-items: center;
-        gap: 32px;
-    }
-    
-}
-
-@media(max-width: 375px) {
-    .createForm.lg {
-        width: 300px;
-    }
-
-    .createForm.lg .dateContainer {
-        display: flex;
-        align-items: center;
-        gap: 25px;
+        gap: 18px;
     }
 
     .dateContainer label {
         font-size: 1.1em;
-        margin-right: 8px;
     }
-    
+
     .dateContainer input {
         background-color: var(--main-white);
         border: none;
         font-size: 1.1em;
+        flex: 1;
         padding: 8px 13px;
         border-radius: 10px;
         -webkit-border-radius: 10px;
@@ -121,5 +67,64 @@
         -o-border-radius: 10px;
         cursor: pointer;
     }
-    
-}
+
+    .dateContainer input:focus {
+        outline: transparent;
+    }
+
+
+    @media(max-width: 576px) {
+        .createForm.lg .dateContainer input {
+            border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            -ms-border-radius: 5px;
+            -o-border-radius: 5px;
+        }
+    }
+
+
+    @media(max-width: 475px) {
+        .createForm.lg {
+            width: 350px;
+            gap: 5px;
+        }
+
+        .createForm.lg .dateContainer {
+            display: flex;
+            align-items: center;
+            gap: 32px;
+        }
+
+    }
+
+    @media(max-width: 375px) {
+        .createForm.lg {
+            width: 300px;
+        }
+
+        .createForm.lg .dateContainer {
+            display: flex;
+            align-items: center;
+            gap: 25px;
+        }
+
+        .dateContainer label {
+            font-size: 1.1em;
+            margin-right: 8px;
+        }
+
+        .dateContainer input {
+            background-color: var(--main-white);
+            border: none;
+            font-size: 1.1em;
+            padding: 8px 13px;
+            border-radius: 10px;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            -ms-border-radius: 10px;
+            -o-border-radius: 10px;
+            cursor: pointer;
+        }
+
+    }
