--- a/src/components/AuthComponents/login/LoginForm.module.css
+++ b/src/components/AuthComponents/login/LoginForm.module.css
@@ -142,6 +142,7 @@
         -ms-border-radius: 10px;
         -o-border-radius: 10px;
         box-shadow: none;
+        overflow-y: hidden;
     }
 
     .loginFormItem {
