--- a/src/components/AuthComponents/login/LoginForm.module.css
+++ b/src/components/AuthComponents/login/LoginForm.module.css
@@ -59,6 +59,7 @@
 
 
 .loginForm button {
+    font-weight: 300;
     background-color: #fff;
     padding: 12px 15px;
     font-size: 1.2em;
@@ -69,9 +70,6 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     cursor: pointer;
-}
-
-.loginForm button {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
