--- a/src/components/AuthComponents/register/RegisterForm.module.css
+++ b/src/components/AuthComponents/register/RegisterForm.module.css
@@ -68,9 +68,7 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     cursor: pointer;
-}
-
-.registerForm button {
+    font-weight: 300;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
