--- a/src/components/reusable/Spinner/Spinner.module.css
+++ b/src/components/reusable/Spinner/Spinner.module.css
@@ -5,7 +5,7 @@
     width: 70px;
     height: 70px;
     animation: spin 1s linear infinite;
-    margin: auto;
+    margin: 120px auto;
 }
 
 @keyframes spin {
