--- a/src/components/AuthComponents/login/LoginForm.module.css
+++ b/src/components/AuthComponents/login/LoginForm.module.css
@@ -35,7 +35,7 @@
 }
 
 .loginFormItem input {
-    background-color: #fff;
+    background-color: var(--main-white);
     flex: 1;
     padding: 12px 15px;
     font-size: 1.2em;
@@ -60,7 +60,7 @@
 
 .loginForm button {
     font-weight: 300;
-    background-color: #fff;
+    background-color: var(--main-white);
     padding: 12px 15px;
     font-size: 1.2em;
     border: none;
@@ -83,6 +83,9 @@
     font-weight: 500;
 }
 
+.error {
+    color: red;
+}
 
 .loginForm p a {
     text-decoration: none;
