--- a/src/components/AuthComponents/login/LoginForm.module.css
+++ b/src/components/AuthComponents/login/LoginForm.module.css
@@ -53,7 +53,7 @@
 }
 
 .loginFormItem input::placeholder {
-    color: var(--main-text);
+    color: var(--main-placeholder);
     font-size: 1em;
 }
 
