--- a/src/components/HeaderComponents/header/Header.module.css
+++ b/src/components/HeaderComponents/header/Header.module.css
@@ -50,7 +50,7 @@
 }
 
 .headerSearch input::placeholder {
-    color: var(--main-text);
+    color: var(--main-placeholder);
     font-size: 1em;
 }
 
