--- a/src/components/HomeComponents/taskItem/TaskItem.module.css
+++ b/src/components/HomeComponents/taskItem/TaskItem.module.css
@@ -90,7 +90,7 @@
         -moz-border-radius: 8px;
         -ms-border-radius: 8px;
         -o-border-radius: 8px;
-}
+    }
 
     .taskDate {
         width: 110px;
@@ -141,15 +141,25 @@
 
 @media(max-width: 425px) {
     .taskItem {
+        background-color: transparent;
+        padding: 13px 0px;
         flex-direction: column;
         gap: 15px;
     }
 
     .taskDate {
+        background-color: var(--main-white);
         width: 100%;
-        padding: 5px;
+        gap: 10px;
+        padding: 7px 10px;
+        margin-bottom: 15px;
         font-size: .9em;
-    }
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+}
 
     .taskDay {
         font-weight: 500;
