fixed bug with unpredictable form show ups and fixed dateIdentifier generation for recurring tasks

--- a/src/components/SideBarComponents/createForm/form/Form.module.css
+++ b/src/components/SideBarComponents/createForm/form/Form.module.css
@@ -221,7 +221,15 @@
         cursor: pointer;
     }
 
-    @media(max-width: 1020px) {
+    @media(max-width: 1220px) {
+        .createForm {
+            display: none;
+        }
+
+        .formDate {
+            display: none;
+        }
+
         .timeContainer .timeItem {
             display: flex;
             gap: 15px;
